button spacing fix, improved footer on mobile
- Moved button spacing for home page to home.css
- Removed music widget from footer on mobile
- Fixed footer going to desktop layout on some screen resolutions

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -78,7 +78,6 @@ nav {
 .button { 
     background-color: #000; 
     padding: .75rem 1.75rem;
-    margin-right: 15px;
     border-radius: 0.25rem;
     border: 1px solid #000;
     transition: .25s; 
@@ -123,19 +122,7 @@ nav {
     margin: 1rem 0 30px 0;
 }
 
-@media (min-width: 701px) {
-    .nav-grid {
-        padding-right: 0; 
-        grid-auto-flow: column; 
-        row-gap: .375rem;
-        column-gap: 1.75rem;
-        display: grid; 
-    }
-
-    .nav-btn, .nav-icn, .nav-overlay {
-        display: none;
-    }
-
+@media (min-width: 1001px) {
     .footer-container {
         display: grid; 
         grid-template-columns: repeat(2, 1fr);
@@ -193,6 +180,29 @@ nav {
         line-height: 1.5;
         font-weight: 300;
         margin: 2px 5px;
+    }
+} @media (min-width: 701px) {
+    .nav-grid {
+        padding-right: 0; 
+        grid-auto-flow: column; 
+        row-gap: .375rem;
+        column-gap: 1.75rem;
+        display: grid; 
+    }
+
+    .nav-btn, .nav-icn, .nav-overlay {
+        display: none;
+    }
+} @media (max-width: 1000px) { 
+    .footer-container {
+        display: flex; 
+        flex-direction: column;
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .footer-music {
+        display: none;
     }
 } @media (max-width: 700px) {
     .nav-grid, .nav-btn {
@@ -289,69 +299,5 @@ nav {
     .nav-btn:checked ~ .nav-overlay > ul > li {
         opacity: 1;
         transition-delay: .5s;
-    }
-
-    .footer-container {
-        display: flex; 
-        flex-direction: column;
-        width: 80%;
-        margin: 0 auto;
-    }
-
-    .footer-title {
-        order: 2;
-        margin: 50px 0 0 0;
-    }
-
-    .footer-music {
-        order: 1;
-        display: flex; 
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
-    
-    .footer-music h1 {
-        font-size: 20px; 
-        line-height: 1;
-        font-weight: 300;
-        width: 100%;
-    }
-    
-    .footer-music >h1:after {
-        content: "";
-        display: block;
-        width: 50px;
-        height: 1px;
-        background: #00cdcd;
-        margin: 10px 0;
-    }
-    
-    .footer-music img {
-        width: 200px; 
-        height: 200px;
-        margin: auto 0;
-    }
-
-    .track-info {
-        display: flex; 
-        flex-direction: column;
-        align-items: center;    
-        width: 100%;
-    }
-    
-    .track-info h1 {
-        text-align: center;
-        font-size: 1.5rem; 
-        line-height: 1.2;
-        font-weight: 300;
-        margin: 5px 0;
-    }
-    
-    .track-info p {
-        font-size: .75rem; 
-        line-height: 1.5;
-        font-weight: 300;
-        margin: 2px 0;
     }
 }
